Fix widescreen layout issues

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,10 +6,10 @@
 }
 
 .main .home .content .search {
-  position: fixed;
+  position: absolute;
   width: calc(var(--list-width) + 10px);
   max-width: calc(100% - var(--padding) - 10px);
-  top: var(--header-height);
+  top: 0;
   background-color: var(--background-color);
   padding: var(--padding) 5px 0 5px;
   box-sizing: border-box;
@@ -615,12 +615,12 @@
 }
 
 .main .home .content .home-map {
-  position: fixed;
-  top: calc(var(--header-height) + var(--padding));
+  position: absolute;
+  top: var(--padding);
   right: var(--padding);
-  width: calc(100% - var(--list-width) - var(--padding) * 3);
+  width: calc(100% - var(--list-width) - var(--padding)* 3);
   max-width: calc(var(--max-width) - var(--list-width));
-  height: calc(100% - var(--header-height) - var(--footer-height) - var(--padding) * 2);
+  height: calc(100vh - var(--header-height) - var(--footer-height) - var(--padding)* 2);
   box-sizing: border-box;
   background-color: var(--background-color);
   border-radius: 22px;
@@ -830,13 +830,6 @@
   display: inline-block;
   vertical-align: bottom;
   margin: 3px 6px;
-}
-
-@media screen and (min-width: 1920px) {
-  .main .home .content .home-map {
-    right: calc(100% / 2 - var(--max-width) / 2);
-  }
-
 }
 
 @media screen and (max-width: 1000px) {
